--- a/bois.2cpt.v1.in
+++ b/bois.2cpt.v1.in
@@ -12,30 +12,27 @@
 # Frederic Bois - Dec 2016
 #-------------------------------------------------------------------------------
 
-OutputFile ("bois.2cpt.v1.out");
+OutputFile ("Drug_X.simple.out");
 
-Integrate (Lsodes, 1e-12, 1e-15, 1);
+IngDose    = 1000; # ingested input (micromoles)
+Period     = 24;   # period of the exposure/no exposure cycle (h)
+Tlag       = 1.0;  # Absorption lagtime (h)
+Ka         = 10;   # Intestinal absortion rate (micromole/h)
 
-IngDose    = 125;  # ingested dose (micromoles)
-Period     = 1E6;  # period of the exposure/no exposure cycle (h)
-Tlag       = 0.0;  # Absorption lagtime (h)
-Ka         = 1.3;  # Intestinal absortion rate constant (1/h)
-
-# Elimination rate constant (micromole/h)
-Ke = 0.02;
+# Metabolic clearance (micromole/h)
+Kmet = 0.01;
 
 # Volumes (L)
-V_central = 10;
-V_periph  = 50; 
+V_central = 1;
+V_periph  = 1; 
 
 # Transfer rates between compartments (micromole/h)
-Kc2p = 0.03;
+Kc2p = 0.1;
 Kp2c = 0.05;
 
+
 Simulation {
-  PrintStep (Oral_input, Q_central, Q_periph, Q_elim, Q_total, 
-             C_central, C_periph, 0, 96, 0.5);
+  PrintStep (Q_central, Q_periph, Q_met, 0, 720, 1);
 }
-
+  
 End.
-
