--- a/bois.2cpt.v1.in
+++ b/bois.2cpt.v1.in
@@ -12,7 +12,7 @@
 # Frederic Bois - Dec 2016
 #-------------------------------------------------------------------------------
 
-OutputFile ("Drug_X.simple.out");
+OutputFile ("bois.2cpt.v1.out");
 
 IngDose    = 1000; # ingested input (micromoles)
 Period     = 24;   # period of the exposure/no exposure cycle (h)
@@ -20,7 +20,7 @@ Tlag       = 1.0;  # Absorption lagtime (h)
 Ka         = 10;   # Intestinal absortion rate (micromole/h)
 
 # Metabolic clearance (micromole/h)
-Kmet = 0.01;
+Kmet = 0.01;    
 
 # Volumes (L)
 V_central = 1;
@@ -32,7 +32,7 @@ Kp2c = 0.05;
 
 
 Simulation {
-  PrintStep (Q_central, Q_periph, Q_met, 0, 720, 1);
+  PrintStep (Oral_input, Q_central, Q_periph, Q_met, 0, 96, 1);
 }
   
 End.
