--- a/theoph.1cpt.in
+++ b/theoph.1cpt.in
@@ -17,19 +17,20 @@ Integrate (Lsodes, 1e-12, 1e-15, 1);
 
 
 IngDose    = 1;  # ingested dose (micromoles)
-Period     = 1E6;  # period of the exposure/no exposure cycle (h)
+Period     = 24;  # period of the exposure/no exposure cycle (h)
 Tlag       = 0.0;  # Absorption lagtime (h)
+Ka         = 1;   # Intestinal absortion rate (micromole/h)
+
+# Volumes (L)
+V_dist = 0.7; 
 
 # Rate constant (micromole/h)
 k_elim = 0.2;
 k_gutabs = 1;
 
-# Volumes (L)
-V_dist = 0.7; 
-
 
 Simulation {
-  PrintStep (Q_total, 0, 96, 1);
+  PrintStep (Oral_input, C_rest, Q_total, 0, 96, 1);
 }
 
 End.
