--- a/theoph.1cpt.mcmc.in
+++ b/theoph.1cpt.mcmc.in
@@ -1,5 +1,5 @@
 Integrate(Lsodes, 1.0e-5, 3.09e-7, 1);
-MCMC("theoph_groups_4567.csv", "", "", 10000, 0, 10, 10000, 4567); # Full calibration
+MCMC("theoph_groups_2345.csv", "", "", 20000, 0, 20, 20000, 2345); # Full calibration
 
 
 Level { # Population Level
@@ -13,14 +13,12 @@ Level { # Population Level
 
 #Distrib(M_lnV_dist,TruncNormal, -0.4831644, 0.2741961, -2.110483, -0.08538681);
 #Distrib(M_lnk_e, TruncNormal, -1.662183, 0.4658197, -3.031792, 0.1113578);
-Distrib(M_lnV_dist, Uniform, -2.110483, -0.08538681);
-Distrib(M_lnk_e, Uniform, -6., 0.);
-Distrib(M_lnk_a, Uniform, -6., 0.);
+Distrib(M_lnV_dist, Uniform, -2.829878, -0.03702585);
+Distrib(M_lnk_e, Uniform, -2.892829, -0.03061297);
 
 
 Distrib(V_lnV_dist, InvGamma, 2.25, 0.3125);
 Distrib(V_lnk_e, InvGamma, 2.25, 0.3125);
-Distrib(V_lnk_a, InvGamma, 2.25, 0.3125);
 
 Distrib(Ve_lnC_rest, LogUniform, 0.01, 0.5);
 
@@ -28,17 +26,15 @@ Likelihood(Data(lnC_rest), Normal_v, Prediction(lnC_rest), Ve_lnC_rest);
 
 
 Level { # Group Level
-Distrib(lnV_dist, TruncNormal_v, M_lnV_dist, V_lnV_dist,  -2.110483, -0.08538681);
-Distrib(lnk_e, TruncNormal_v, M_lnk_e, V_lnk_e, -6., 0.);
-Distrib(lnk_a, TruncNormal_v, M_lnk_a, V_lnk_a, -6., 0.);
+Distrib(lnV_dist, TruncNormal_v, M_lnV_dist, V_lnV_dist,  -2.829878, -0.03702585);
+Distrib(lnk_e, TruncNormal_v, M_lnk_e, V_lnk_e, -2.892829, -0.03061297);
 
 
 Level { # Group A
 #--------------
 
-Distrib(lnV_dist, TruncNormal_v, lnV_dist, V_lnV_dist, -2.110483, -0.08538681);
-Distrib(lnk_e, TruncNormal_v, lnk_e, V_lnk_e, -6., 0.);
-Distrib(lnk_a, TruncNormal_v, lnk_a, V_lnk_a, -6., 0.);
+Distrib(lnV_dist, TruncNormal_v, lnV_dist, V_lnV_dist, -2.829878, -0.03702585);
+Distrib(lnk_e, TruncNormal_v, lnk_e, V_lnk_e, -2.892829, -0.03061297);
 
 
 Simulation { # Sim. 1
@@ -62,7 +58,6 @@ Level { # Group B
 
 Distrib(lnV_dist, TruncNormal_v, lnV_dist, V_lnV_dist, -2.110483, -0.08538681);
 Distrib(lnk_e, TruncNormal_v, lnk_e, V_lnk_e, -6, 0.);
-Distrib(lnk_a TruncNormal_v, lnk_a, V_lnk_a, -6, 0.);
 
 
 Simulation { # Sim. 2
