--- a/1cpt.MCMC2.in
+++ b/1cpt.MCMC2.in
@@ -6,12 +6,12 @@
 # Copyright (c) 1993-2008 Free Software Foundation, Inc.
 #------------------------------------------------------------------------------
 
-MCMC ("1cpt.MCMC1.out",        # output file
+MCMC ("1cpt.MCMC2.out",        # output file
        "",                     # name of restart file
        "",                     # name of data file
        2000, 0,                # iterations, print predictions flag,
        10, 2000,               # printing frequency, iters to print
-       1234);           # random seed
+       2345);           # random seed
 
 Level { # top
 
@@ -25,7 +25,7 @@ Level { # top
   Likelihood (Data(ln_C_central), Normal, Prediction(ln_C_central), 0.1);
 #  Likelihood (Data(ln_AUC),       Normal, Prediction(ln_AUC),       0.1);
 
-  Level { # subject 1
+  Level { # subject
 
     Simulation {
 
