--- a/theoph.1cpt.mcmc.in
+++ b/theoph.1cpt.mcmc.in
@@ -1,8 +1,18 @@
 Integrate(Lsodes, 1.0e-5, 1e-8, 1);
-MCMC("theoph_groups_1234.csv", "", "", 2000, 0, 20, 2000, 1234); # Full calibration
+#MCMC("theoph_groups_c01.out",
+#     "", "", 4000, 0, 4, 4000, 1111); # Full calibration
+MCMC("theoph_groups_c01v.out",
+     "theoph_groups_c01.out", "", 4000, 1, 4, 4000, 1111); # Valid
 
 
 Level { # Population Level
+
+# Fixed parameters
+MW = 180.17; # Theophylline MW
+Period     = 48;    # period of the exposure/no exposure cycle (h)
+Tlag       = 0.0;   # Absorption lagtime (h)
+k_a        = 1;   # Intestinal absortion rate (/h)
+#Fgutabs    = 0.98;
 
 # Population parameters to be calibrated
 # ======================================
@@ -11,12 +21,15 @@ Level { # Population Level
 # Remove the ... and fill these in
 # ======================================
 
-Distrib(M_lnV_dist, Uniform, -1.021558, -0.1271194);
-Distrib(M_lnk_e, Uniform, -2.464244, -0.7208429);
-
+Distrib(M_lnV_dist, Uniform, -3, 3);
+#Distrib(M_lnk_a, Uniform, -3, 3);
+Distrib(M_lnk_e, Uniform, -3, 3);
+Distrib(M_Fgutabs, Uniform, 0., 1);
 
 Distrib(V_lnV_dist, InvGamma, 2.25, 0.3125);
+#Distrib(V_lnk_a, InvGamma, 2.25, 0.3125);
 Distrib(V_lnk_e, InvGamma, 2.25, 0.3125);
+Distrib(V_Fgutabs, InvGamma, 2.25, 0.3125);
 
 Distrib(Ve_lnC_rest, LogUniform, 0.01, 0.5);
 
@@ -24,45 +37,33 @@ Likelihood(Data(lnC_rest), Normal_v, Prediction(lnC_rest), Ve_lnC_rest);
 
 
 Level { # Group Level
-Distrib(lnV_dist, TruncNormal_v, M_lnV_dist, V_lnV_dist,  -2.829878, -0.03702585);
-Distrib(lnk_e, TruncNormal_v, M_lnk_e, V_lnk_e, -2.892829, -0.03061297);
-
+Distrib(lnV_dist, TruncNormal_v, M_lnV_dist, V_lnV_dist,  -3, 3);
+#Distrib(lnk_a, TruncNormal_v, M_lnk_a, V_lnk_a, -3, 3);
+Distrib(lnk_e, TruncNormal_v, M_lnk_e, V_lnk_e, -3, 3);
+Distrib(Fgutabs, TruncNormal_v, M_Fgutabs, V_Fgutabs, 0., 1);
 
 Level { # Group A
-#--------------
 Simulation { # Sim. 1
 
-MW = 180.17; # Theophylline
-
-Fgutabs    = 0.98;
-IngDose    = 4.02;   # ingested dose (mg)
-Period     = 48;    # period of the exposure/no exposure cycle (h)
-Tlag       = 0.0;   # Absorption lagtime (h)
-k_a        = 1.0;   # Intestinal absortion rate (/h)
+BW = 79.6;
+IngDose = 4.02;
 
 Print(lnC_rest,  0.25  0.57  1.12  2.02  3.82  5.10  7.03  9.05 12.12 24.37);
-Data(lnC_rest,  2.757692 3.596402 4.065263 3.981881 3.863322 3.837346 3.724783 3.643959 3.495597 2.901731);
-}
+Data(lnC_rest,  2.75766  3.59637  4.06523  3.98185  3.86329  3.83731  3.72475  3.64393  3.49556  2.90170);
 
+} # End Sim.1
 } # End Group A
 
 Level { # Group B
-#--------------
-
 Simulation { # Sim. 2
 
-MW = 180.17; # Theophylline
-
-Fgutabs    = 0.98;
-IngDose    = 5.50;   # ingested dose (mg)
-Period     = 48;    # period of the exposure/no exposure cycle (h)
-Tlag       = 0.0;   # Absorption lagtime (h)
-k_a        = 1.0;   # Intestinal absortion rate (/h)
+BW = 58.2;
+IngDose = 5.50;
 
 Print(lnC_rest, 0.37  0.77  1.02  2.05  3.55  5.05  7.08  9.38 12.10 23.70);
-Data(lnC_rest, 2.7751442 3.3663851 3.5717470 3.7718502 4.0372554 3.9309149 3.7958262 3.6796005 3.4508390 2.5976553);
-} # End Sim.2
+Data(lnC_rest, 2.77511  3.36635  3.57171  3.77182  4.03722  3.93088  3.79579  3.67957  3.45081  2.59762);
 
+} # End Sim.2
 } # End Group B
 
 } # End Group Level
